[package]
name = "tracing-line-filter"
version = "0.1.0"
authors = ["Eliza Weisman <eliza@buoyant.io>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/hawkw/line-filter"
homepage = "https://github.com/hawkw/line-filter"
description = """
A `tracing` filter for enabling individual events and spans by line number.
"""
categories = [
    "development-tools::debugging",
]
keywords = ["logging", "tracing"]
edition = "2018"

[badges]
maintenance = { status = "experimental" }

[dependencies]
tracing-subscriber = "0.2"
tracing-core = "0.1"

[dev-dependencies]
tracing = "0.1"

